<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- Add necessary string values -->
    <string name="upcoming_elections">UPCOMING ELECTIONS</string>
    <string name="find_representatives">FIND MY REPRESENTATIVES</string>
    <string name="use_location">USE MY LOCATION</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="hint_city">City</string>
    <string name="hint_zip">Zip</string>
    <string name="my_representatives">My Representatives</string>
    <string name="follow_election">FOLLOW ELECTION</string>
    <string name="unfollow_election">UNFOLLOW ELECTION</string>
    <string name="location_request_denied">\"Please enable location\"</string>
    <string name="settings">Settings</string>
    <string name="turn_on_location">"Please turn on location in settings"</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_info">Ballot Information</string>
    <string name="correspondence_address">Correspondence Address</string>
    <string name="saved_elections">Saved Elections</string>

</resources>
