<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- TODO: Add data binding node -->
    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <!-- TODO: Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motion_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="10dp"
        app:layoutDescription="@xml/fragment_representative_scene"
        app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed">

        <!-- TODO: Add visual styling and content -->
        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->

        <TextView
            android:id="@+id/search_title"
            style="@style/head_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/representative_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/address_line_1"
            style="@style/content_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:autofillHints="AddressLine"
            android:hint="@string/address_line_1"
            android:inputType="textPostalAddress"
            android:minHeight="@dimen/edit_text_height"
            android:text="@{viewModel.address.line1}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/address_line_2"
            style="@style/content_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:autofillHints="AddressLine"
            android:hint="@string/address_line_2"
            android:inputType="textPostalAddress"
            android:minHeight="@dimen/edit_text_height"
            android:text="@{viewModel.address.line2}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/city"
            style="@style/content_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="City"
            android:hint="@string/hint_city"
            android:inputType="textPostalAddress"
            android:minHeight="@dimen/edit_text_height"
            android:text="@{viewModel.address.city}"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />

        <!-- TODO: Add default values from provided resources  -->
        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <Spinner
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:entries="@array/states"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toBottomOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city"
            motion:ignore="SpeakableTextPresentCheck" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/zip"
            style="@style/content_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="Zip"
            android:hint="@string/hint_zip"
            android:inputType="number"
            android:maxLength="5"
            android:minHeight="@dimen/edit_text_height"
            android:text="@{viewModel.address.zip}"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city" />

        <!-- TODO: Add visual styling and label -->

        <!-- TODO: Add visual styling and content -->

        <!-- TODO: Add Representatives RecyclerView -->
        <!-- TODO: Add visual styling and content -->

        <Button
            android:id="@+id/search_button"
            style="@style/button_style"
            android:layout_marginTop="44dp"
            android:text="@string/find_representatives"
            app:layout_constraintTop_toBottomOf="@id/zip" />

        <Button
            android:id="@+id/location_button"
            style="@style/button_style"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/use_location"
            app:layout_constraintTop_toBottomOf="@id/search_button" />

        <TextView
            android:id="@+id/representative_title"
            style="@style/head_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_representatives"
            app:layout_constraintTop_toBottomOf="@+id/location_button" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representatives_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/default_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/representative_title"
            tools:listitem="@layout/representative_item" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>